--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME="Laravel Starter"
+APP_NAME="DFI Realtors"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DpEatI8azAwd631k+PPBIemWgiiF1T8aHc2DzWGPxVI=
 APP_DEBUG=true
 APP_TIMEZONE="Asia/Dhaka"
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 INITIAL_USERNAME=100000
 USER_REGISTRATION=true
